--- a/Programacion/Html/index.html
+++ b/Programacion/Html/index.html
@@ -266,9 +266,9 @@
         // ==========================================
         // CONFIGURACIÓN: CAMBIA ESTO POR TUS DATOS
         // ==========================================
-        const GITHUB_USER = 'microsoft'; // Pon aquí tu usuario de GitHub (ej. 'TuUsuario')
-        const GITHUB_REPO = 'vscode';    // Pon aquí el nombre de tu repositorio (ej. 'Mis-Codigos')
-        const BRANCH = 'main';           // Usualmente 'main' o 'master'
+        const GITHUB_USER = 'HEROBRINE100008'; // Pon aquí tu usuario de GitHub (ej. 'TuUsuario')
+        const GITHUB_REPO = 'BrineLab';    // Pon aquí el nombre de tu repositorio (ej. 'Mis-Codigos')
+        const BRANCH = 'main/Programacion';           // Usualmente 'main' o 'master'
         // ==========================================
 
         const repoTree = document.getElementById('repo-tree');
