--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         // ==========================================
         const GITHUB_USER = 'HEROBRINE100008'; // Pon aquí tu usuario de GitHub (ej. 'TuUsuario')
         const GITHUB_REPO = 'BrineLab';    // Pon aquí el nombre de tu repositorio (ej. 'Mis-Codigos')
-        const BRANCH = 'main/Programacion';           // Usualmente 'main' o 'master'
+        const BRANCH = 'main/BrineLab';           // Usualmente 'main' o 'master'
         // ==========================================
 
         const repoTree = document.getElementById('repo-tree');
