--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
     flex-direction: column;
 }
 
-/* HEADER */
+/* ================= HEADER ================= */
 header {
     height: 60px;
     background: black;
@@ -39,13 +39,31 @@ header {
     padding: 0 20px;
 }
 
-/* LAYOUT */
+.brand {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.brand img {
+    height: 42px;
+    width: auto;
+    image-rendering: crisp-edges;
+}
+
+.brand span {
+    color: var(--accent);
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+/* ================= LAYOUT ================= */
 .main {
     flex: 1;
     display: flex;
 }
 
-/* SIDEBAR */
+/* ================= SIDEBAR ================= */
 .sidebar {
     width: 260px;
     background: #0a0a0a;
@@ -65,13 +83,13 @@ header {
     color: var(--accent);
 }
 
-/* WORKSPACE */
+/* ================= WORKSPACE ================= */
 .workspace {
     flex: 1;
     display: flex;
 }
 
-/* EDITOR */
+/* ================= EDITOR ================= */
 .editor {
     flex: 6;
     background: #111;
@@ -102,7 +120,7 @@ pre {
     height: 100%;
 }
 
-/* TERMINAL */
+/* ================= TERMINAL ================= */
 .terminal {
     flex: 4;
     background: black;
@@ -134,7 +152,11 @@ pre {
 <body>
 
 <header>
-    <span style="color:#c90000;font-weight:bold;">HEROBRINE CODE VAULT</span>
+    <div class="brand">
+        <!-- 🔥 LOGO RESTAURADO -->
+        <img src="logo-h.png" alt="Herobrine Logo">
+        <span>HEROBRINE CODE VAULT</span>
+    </div>
     <i class="fab fa-github"></i>
 </header>
 
@@ -160,15 +182,11 @@ pre {
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/prism.min.js"></script>
 
 <script>
-/* ================= CONFIG ================= */
 const GITHUB_USER = 'HEROBRINE100008';
 const GITHUB_REPO = 'BrineLab';
 const BRANCH = 'main';
 
-/* EXTENSIONES BINARIAS */
 const BINARY_EXTENSIONS = ['db','sqlite','sqlite3','exe','bin','dll'];
-
-/* ========================================= */
 
 const tree = document.getElementById('tree');
 const codeEl = document.getElementById('code');
@@ -184,7 +202,6 @@ function log(text) {
     terminal.scrollTop = terminal.scrollHeight;
 }
 
-/* CARGAR REPO */
 async function load(path = '') {
     const url = `https://api.github.com/repos/${GITHUB_USER}/${GITHUB_REPO}/contents/${path}?ref=${BRANCH}`;
     const res = await fetch(url);
@@ -200,33 +217,23 @@ async function load(path = '') {
     });
 }
 
-/* ABRIR ARCHIVO */
 async function openFile(file) {
     const ext = file.name.split('.').pop().toLowerCase();
     filenameEl.textContent = file.name;
 
-    /* 🚫 BINARIO */
     if (BINARY_EXTENSIONS.includes(ext)) {
         codeEl.className = 'language-none';
         codeEl.textContent =
-`⚠ ARCHIVO BINARIO DETECTADO
+`⚠ ARCHIVO BINARIO
 
-Este archivo es una base de datos SQLite u otro binario.
-No puede mostrarse como texto.
-
-✔ Archivo: ${file.name}
-✔ Tipo: BINARIO
-✔ Solución:
-  - Descárgalo
-  - Ábrelo con DB Browser for SQLite
-  - Úsalo desde Python (sqlite3)`;
+Este archivo no puede mostrarse como texto.
+Descárgalo para abrirlo correctamente.`;
 
         Prism.highlightElement(codeEl);
         log('Archivo binario bloqueado: ' + file.name);
         return;
     }
 
-    /* TEXTO */
     const res = await fetch(file.download_url);
     currentCode = await res.text();
     currentLang = ext;
@@ -238,13 +245,11 @@ No puede mostrarse como texto.
     log('Archivo cargado: ' + file.name);
 }
 
-/* EJECUTAR */
 function runCode() {
     if (currentLang === 'js') sandboxJS(currentCode);
     else log('Simulación: ' + currentLang.toUpperCase() + ' (requiere backend)');
 }
 
-/* SANDBOX JS */
 function sandboxJS(code) {
     const iframe = document.createElement('iframe');
     iframe.style.display = 'none';
@@ -262,7 +267,6 @@ function sandboxJS(code) {
     }
 }
 
-/* TERMINAL INPUT */
 input.addEventListener('keydown', e => {
     if (e.key === 'Enter') {
         const cmd = input.value;
